[package]
name = "nlbn"
version = "1.0.8"
edition = "2024"
authors = ["linkyourbin"]
description = "Fast and reliable EasyEDA/LCSC to KiCad converter with batch processing support"
license = "CC-BY-NC-4.0"
repository = "https://github.com/linkyourbin/nlbn"
homepage = "https://github.com/linkyourbin/nlbn"
documentation = "https://github.com/linkyourbin/nlbn"
readme = "README.md"
keywords = ["kicad", "easyeda", "lcsc", "eda", "converter"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "nlbn"
path = "src/lib.rs"

[[bin]]
name = "nlbn"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
regex = "1.12.3"
thiserror = "2.0.18"
anyhow = "1.0.102"
log = "0.4.29"
env_logger = "0.11.9"
tokio = { version = "1.49.0", features = ["full"] }
chrono = "0.4.44"

[dev-dependencies]
mockito = "1.7.2"
